--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,61 @@
-# Compiled class file
+# --- Compilación y ejecución ---
 *.class
-
-# Log file
 *.log
+hs_err_pid*
+replay_pid*
+*.exe
 
-# BlueJ files
-*.ctxt
+# --- Build tools ---
+# Maven
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# Gradle
+.gradle/
+build/
+!gradle/wrapper/gradle-wrapper.jar
 
-# Package Files #
+# --- Reportes y resultados de pruebas ---
+**/karate-reports/
+**/surefire-reports/
+**/failsafe-reports/
+**/test-results/
+**/reports/
+
+# --- Archivos del sistema operativo ---
+# macOS
+.DS_Store
+._*
+.Spotlight-V100
+.Trashes
+
+# Windows
+Thumbs.db
+[Dd]esktop.ini
+$RECYCLE.BIN/
+
+# Linux
+*~
+.fuse_hidden*
+
+# --- Entornos y configuraciones locales ---
+.env
+.local
+.idea
+.vscode
+.settings
+.project
+.classpath
+*.launch
+*.prefs
+*.iml
+*.ipr
+*.iws
+
+# --- Dependencias y empaquetado ---
 *.jar
 *.war
 *.nar
@@ -18,7 +63,39 @@
 *.zip
 *.tar.gz
 *.rar
+*.7z
+dependency-reduced-pom.xml
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+# --- Archivos temporales y caché ---
+*.tmp
+*.bak
+*.swp
+*.swo
+.cache/
+.tmp/
+temp/
+tmp/
+
+# --- Documentación generada ---
+**/docs/api/
+**/javadoc/
+
+# --- Configuraciones específicas de Karate ---
+karate-config.js
+karate.log
+
+# --- Archivos de propiedades sobreescritos ---
+*.properties
+!src/test/resources/application.properties  # Mantiene el archivo principal
+
+# --- Otros ---
+.mtj.tmp/
+*.ctxt
+bin/
+out/
+dist/
+.mvn/
+mvnw*
+.generated/
+.factorypath
+.apt_generated
