--- a/.github/workflows/karate-tests.yml
+++ b/.github/workflows/karate-tests.yml
@@ -11,21 +11,20 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+    - uses: actions/checkout@v4
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin'
-          java-version: '17'
+    - name: Set up Java
+      uses: actions/setup-java@v4
+      with:
+        distribution: 'temurin'
+        java-version: '17'
 
-      - name: Build and test with Maven
-        run: mvn clean test
+    - name: Build with Maven
+      run: mvn test
 
-      - name: Upload Karate HTML Report
-        if: always()
-        uses: actions/upload-artifact@v3
-        with:
-          name: karate-html-report
-          path: target/karate-reports/
+    - name: Upload Karate report
+      if: always()
+      uses: actions/upload-artifact@v4
+      with:
+        name: karate-report
+        path: target/karate-reports/
